--- a/css/styles.css
+++ b/css/styles.css
@@ -4,19 +4,16 @@
     margin: 0;
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif,Arial, Helvetica, sans-serif;
 }
-
 div.container{
     width: 70%;
     margin: auto;
 }
-
 div.first-row{
     width: 100%;
     display: flex;
     align-items: baseline;
     padding: 15px;
 }
-
 div.first-column{
     min-height: 130px;
     width: 40%;
@@ -24,10 +21,8 @@ div.first-column{
     padding: 0px 20px 20px 20px;
     text-align: center;
     border-radius: 5px;
-    background-color: #a8dadc  ;
-
+    background-color: #a8dadc;
 }
-
 div.first-column .inputs-cointaner input{
     background-color: rgba(255, 255, 255, 0.294);
     width: 100%;
@@ -50,13 +45,41 @@ div.second-column{
     background-color: #F9CAC8;
 }
 
+h2{
+    text-align: center;
+    color:  #1d3557 ;
+    margin: 10px;
+    font-size: 30px;
+}
+
+ul {
+    margin: 15px;
+    color:  #1d3557;
+    font-size: 20px;
+}
+ul li{
+    list-style: none;
+    margin-top: 10px;
+    border-bottom: 1px solid #457B9D;
+    display: flex;
+    overflow: auto;
+    justify-content: space-between;
+    background: rgba(255, 255, 255, 0.294);
+    padding: 5px;
+    border-radius: 3px;
+}
+.complete{
+    text-decoration: line-through;
+    background-color: rgba(255, 255, 255, 0.6);
+    margin-left: 3px;
+}
+
 @media screen and (max-width: 1000px){
     div.container{
         width: 98%;
     }
 
 }
-
 
 @media screen and (max-width: 600px){
     div.container{
@@ -75,42 +98,4 @@ div.second-column{
         width: 100%;
         margin: 20px 0px;
     }
-}
-
-
-
-/*Generals Styles*/
-
-h2{
-    text-align: center;
-    color:  #1d3557 ;
-    margin: 10px;
-    font-size: 30px;
-}
-
-ul {
-    margin: 15px;
-    color:  #1d3557;
-    font-size: 20px;
-}
-
-ul li{
-    list-style: none;
-    margin-top: 10px;
-    border-bottom: 1px solid #457B9D;
-    display: flex;
-    overflow: auto;
-    justify-content: space-between;
-    background: rgba(255, 255, 255, 0.294);
-    padding: 5px;
-    border-radius: 3px;
-}
-
-
-.container-items{
-    display: flex;
-    width: 60px;
-    margin: 0px 10px;
-    justify-content: space-between;
-    align-items: center;
 }
